[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/StatusEffects.gd" type="Script" id=1]
[ext_resource path="res://Particles/random_selection.png" type="Texture" id=2]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 1
light_mode = 1
particles_animation = true
particles_anim_h_frames = 3
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0.0195122, 0.341463 )
colors = PoolColorArray( 0.67451, 0.156863, 0.278431, 1, 0.92549, 0.152941, 0.247059, 1 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 1 ), 0.0, -0.676521, 0, 0, Vector2( 0.973684, 0 ), -0.463433, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 720.0
angle_random = 1.0
scale = 0.25
scale_curve = SubResource( 5 )
color_ramp = SubResource( 3 )
anim_offset = 1.0
anim_offset_random = 1.0

[node name="StatusEffects" type="Node2D"]
show_behind_parent = true
script = ExtResource( 1 )

[node name="ShatterDef" type="Particles2D" parent="."]
show_behind_parent = true
material = SubResource( 1 )
emitting = false
lifetime = 0.5
process_material = SubResource( 6 )
texture = ExtResource( 2 )

[node name="ShatterDefTimer" type="Timer" parent="ShatterDef"]
wait_time = 3.0
one_shot = true
[connection signal="timeout" from="ShatterDef/ShatterDefTimer" to="." method="_on_ShatterDefTimer_timeout"]
